# tink-java-gcpkms

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  index.html  tink_java_gcpkms_deps.bzl
examples/: MODULE.bazel  WORKSPACE
examples/encryptedkeyset/: BUILD.bazel  EncryptedKeysetExample.java  README.md
examples/envelopeaead/: BUILD.bazel  README.md
examples/gcs/: BUILD.bazel  README.md
examples/maven/: README.md  pom.xml
examples/maven/src/main/java/com/helloworld/: HelloWorld.java
javadoc/tink-gcpkms/1.10.0/: allclasses-noframe.html  index-all.html  overview-tree.html
javadoc/tink-gcpkms/1.10.0/com/google/crypto/tink/integration/gcpkms/: GcpKmsClient.html  package-summary.html  package-tree.html  package-use.html
javadoc/tink-gcpkms/1.8.0/: index-all.html
javadoc/tink-gcpkms/1.8.0/com/google/crypto/tink/integration/gcpkms/: GcpKmsClient.html
javadoc/tink-gcpkms/1.9.0/: index-all.html
javadoc/tink-gcpkms/1.9.0/com/google/crypto/tink/integration/gcpkms/: GcpKmsAead.html
javadoc/tink-gcpkms/HEAD/: allclasses-frame.html  allclasses-index.html  constant-values.html  deprecated-list.html  member-search-index.js  overview-tree.html  type-search-index.js
javadoc/tink-gcpkms/HEAD-SNAPSHOT/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
javadoc/tink-gcpkms/HEAD-SNAPSHOT/com/google/crypto/tink/integration/gcpkms/: GcpKmsAead.Builder.html  GcpKmsAead.html  GcpKmsClient.html  GcpKmsMac.Builder.html  GcpKmsMac.html  GcpKmsPublicKeySign.Builder.html  GcpKmsPublicKeySign.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
javadoc/tink-gcpkms/HEAD-SNAPSHOT/com/google/crypto/tink/integration/gcpkms/class-use/: GcpKmsAead.Builder.html  GcpKmsMac.Builder.html  GcpKmsMac.html  GcpKmsPublicKeySign.Builder.html  GcpKmsPublicKeySign.html
javadoc/tink-gcpkms/HEAD/com/google/crypto/tink/integration/gcpkms/: GcpKmsAead.html  GcpKmsClient.html  GcpKmsPublicKeySign.Builder.html  GcpKmsPublicKeySign.html  package-use.html
javadoc/tink-gcpkms/HEAD/com/google/crypto/tink/integration/gcpkms/class-use/: GcpKmsAead.Builder.html  GcpKmsAead.html  GcpKmsClient.html  GcpKmsPublicKeySign.Builder.html
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh  release_github.sh  release_maven.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh  test_script.sh
kokoro/gcp_ubuntu/examples/bazel/: run_tests.sh
kokoro/gcp_ubuntu/maven/: run_tests.sh
kokoro/macos_external/bazel/: run_tests.sh
kokoro/macos_external/examples/bazel/: run_tests.sh
kokoro/testutils/: github_release_util_test.sh
maven/: maven_deploy_library_test.sh  tink-java-gcpkms.pom.xml
proto/: BUILD.bazel  aes_cmac.proto  aes_cmac_prf.proto  aes_ctr.proto  aes_ctr_hmac_streaming.proto  aes_eax.proto  aes_gcm.proto  aes_gcm_hkdf_streaming.proto  aes_gcm_siv.proto  aes_siv.proto  chacha20_poly1305.proto  ecdsa.proto  ecies_aead_hkdf.proto  ed25519.proto  hkdf_prf.proto  hmac.proto  hmac_prf.proto  hpke.proto  jwt_ecdsa.proto  jwt_hmac.proto  slh_dsa.proto  tink.proto  xchacha20_poly1305.proto
src/main/java/com/google/crypto/tink/integration/gcpkms/: BUILD.bazel  FakeCloudKms.java  GcpKmsAead.java  GcpKmsClient.java  GcpKmsMac.java  GcpKmsPublicKeySign.java  GcpKmsPublicKeyVerify.java
src/main/java/com/google/crypto/tink/integration/gcpkms/internal/: BUILD.bazel  GcpKmsUtil.java
src/test/java/com/google/crypto/tink/integration/gcpkms/: BUILD.bazel  FakeCloudKmsTest.java  GcpKmsAeadTest.java  GcpKmsClientTest.java  GcpKmsIntegrationTest.java  GcpKmsMacTest.java  GcpKmsPublicKeySignTest.java  GcpKmsPublicKeyVerifyTest.java
src/test/java/com/google/crypto/tink/integration/gcpkms/internal/: BUILD.bazel  GcpKmsUtilTest.java
tools/: build_maven_bundle.sh  create_maven_build_file.sh
