# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################

module(name = "tink_java_gcpkms", version = "1.11.0")

_PROTOBUF_VERSION = "33.6"

bazel_dep(name = "protobuf", version = _PROTOBUF_VERSION)
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_android", version = "0.6.6", repo_name = "build_bazel_rules_android")
bazel_dep(name = "platforms", version = "1.0.0")

_TINK_VERSION = "1.23.0"

bazel_dep(name = "tink_java", dev_dependency = True)
archive_override(
    module_name = "tink_java",
    integrity = "sha256-uzzV/1cCE8/49oIDaM2WVgEqcjbURhF99oJTiJ5FuOg=",
    strip_prefix = "tink-java-%s" % _TINK_VERSION,
    urls = ["https://github.com/tink-crypto/tink-java/archive/refs/tags/v%s.tar.gz" % _TINK_VERSION],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

_GRPC_VERSION = "1.70.0"

maven.artifact(group = "io.grpc", artifact = "grpc-testing", version = _GRPC_VERSION, testonly = True)

maven.install(
    artifacts = [
        # go/keep-sorted start
        "com.google.api-client:google-api-client:2.7.2",
        "com.google.api.grpc:grpc-google-cloud-kms-v1:2.96.0",
        "com.google.api.grpc:proto-google-cloud-kms-v1:2.96.0",
        "com.google.apis:google-api-services-cloudkms:v1-rev20241111-2.0.0",
        "com.google.auth:google-auth-library-oauth2-http:1.33.1",
        "com.google.auto.service:auto-service:1.1.1",
        "com.google.cloud:google-cloud-kms:2.96.0",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.crypto.tink:tink:%s" % _TINK_VERSION,
        "com.google.errorprone:error_prone_annotations:2.41.0",
        "com.google.guava:guava:33.4.0-jre",
        "com.google.http-client:google-http-client-gson:1.46.3",
        "com.google.http-client:google-http-client:1.46.3",
        "com.google.oauth-client:google-oauth-client:1.39.0",
        "com.google.protobuf:protobuf-java:4.%s" % _PROTOBUF_VERSION,
        "com.google.truth:truth:1.4.2",
        "io.grpc:grpc-api:%s" % _GRPC_VERSION,
        "io.grpc:grpc-inprocess:%s" % _GRPC_VERSION,
        "io.grpc:grpc-stub:%s" % _GRPC_VERSION,
        "io.grpc:grpc-testing:%s" % _GRPC_VERSION,
        "junit:junit:4.13.2",
        "org.bouncycastle:bcprov-jdk18on:1.84",
        "org.junit.jupiter:junit-jupiter-api:5.11.3",
        # go/keep-sorted end
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    known_contributing_modules = ["bazel_worker_java", "protobuf", "tink_java", "tink_java_gcpkms"],
)

use_repo(maven, "maven")
