load("@rules_java//java:defs.bzl", "java_library", "java_plugin")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

java_library(
    name = "gcp_kms_client",
    srcs = ["GcpKmsClient.java"],
    plugins = [":auto_service_plugin"],
    deps = [
        ":gcp_kms_aead",
        "@maven//:com_google_api_client_google_api_client",
        "@maven//:com_google_apis_google_api_services_cloudkms",
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_auto_service_auto_service_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:com_google_http_client_google_http_client_gson",
        "@maven//:com_google_oauth_client_google_oauth_client",
    ],
)

java_library(
    name = "gcp_kms_aead",
    srcs = ["GcpKmsAead.java"],
    deps = [
        "@maven//:com_google_api_grpc_proto_google_cloud_kms_v1",
        "@maven//:com_google_apis_google_api_services_cloudkms",
        "@maven//:com_google_cloud_google_cloud_kms",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

# BouncyCastle is only needed to compute the SHAKE-256 message representative for external-mu ML-DSA
# signing. It is exposed as a compile-only (neverlink) dependency so it is not forced onto consumers'
# runtime classpath; consumers that sign with external-mu keys must provide it themselves.
java_library(
    name = "bcprov_neverlink",
    neverlink = 1,
    exports = ["@maven//:org_bouncycastle_bcprov_jdk18on"],
)

java_library(
    name = "gcp_kms_public_key_sign",
    srcs = ["GcpKmsPublicKeySign.java"],
    deps = [
        ":bcprov_neverlink",
        "@maven//:com_google_api_grpc_proto_google_cloud_kms_v1",
        "@maven//:com_google_cloud_google_cloud_kms",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_library(
    name = "gcp_kms_mac",
    srcs = ["GcpKmsMac.java"],
    deps = [
        "@maven//:com_google_api_grpc_proto_google_cloud_kms_v1",
        "@maven//:com_google_cloud_google_cloud_kms",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_plugin(
    name = "auto_service_plugin",
    processor_class = "com.google.auto.service.processor.AutoServiceProcessor",
    deps = [
        "@maven//:com_google_auto_auto_common",
        "@maven//:com_google_auto_service_auto_service",
    ],
)

java_library(
    name = "fake_cloud_kms",
    testonly = 1,
    srcs = ["FakeCloudKms.java"],
    deps = [
        "@maven//:com_google_api_client_google_api_client",
        "@maven//:com_google_apis_google_api_services_cloudkms",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:com_google_http_client_google_http_client_gson",
    ],
)
