load("@rules_java//java:defs.bzl", "java_test")

licenses(["notice"])

java_test(
    name = "GcpKmsUtilTest",
    size = "small",
    srcs = ["GcpKmsUtilTest.java"],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/gcpkms/internal:gcp_kms_util",
        "@maven//:com_google_api_gax",
        "@maven//:com_google_api_gax_grpc",
        "@maven//:com_google_api_grpc_grpc_google_cloud_kms_v1",
        "@maven//:com_google_api_grpc_proto_google_cloud_kms_v1",
        "@maven//:com_google_cloud_google_cloud_kms",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_truth_truth",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_inprocess",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:junit_junit",
    ],
)
